--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "trailingComma": "es5",
     "tabWidth": 2,
     "semi": true,
-    "singleQuote": true
+    "singleQuote": true,
+    "endOfLine": "crlf"
   },
   "browserslist": {
     "production": [
